--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -9,9 +9,10 @@
   <package id="dropzone" version="4.0.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="Kentor.OwinCookieSaver" version="1.0.2" targetFramework="net45" />
   <package id="Less.js" version="1.5.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
@@ -29,10 +30,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moment.js" version="2.9.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog" version="3.2.1" targetFramework="net45" />
   <package id="NLog.Config" version="3.2.0.0" targetFramework="net45" />
-  <package id="NLog.Schema" version="3.2.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.2.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net45" />
 </packages>
