removed some unused packages and libraries changed the boundles so that they reference minified version by default.html added Azure SQL retry configuration, but this is not proven to work
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@490 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -4,12 +4,23 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="rssConfiguration" type="One.Net.BLL.WebConfig.RssConfiguration" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	  <sectionGroup name="bundleTransformer"> 
-	   
-     
-     
-    <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /><section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /></sectionGroup>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <sectionGroup name="bundleTransformer">
+      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+      <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
+      <section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <rssConfiguration>
     <providers>
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
@@ -30,6 +41,14 @@
   </nlog> -->
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.1" />
+      </system.Web>
+  -->
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
@@ -47,7 +66,7 @@
       <error statusCode="404" redirect="~/site_specific/filenotfound.htm" />
       <error statusCode="403" redirect="~/site_specific/authorizationfailed.htm" />
     </customErrors>
-    <compilation debug="true" />
+    <compilation debug="true" targetFramework="4.5.1" />
     <authentication mode="None" />
     <!-- for authorized access to all preview
     <authorization>
@@ -60,7 +79,7 @@
         <add name="AspNetXmlSiteMapProvider" siteMapFile="Web.sitemap" securityTrimmingEnabled="true" type="System.Web.XmlSiteMapProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add name="OneSiteMapProvider" type="One.Net.BLL.OneSiteMapProvider" securityTrimmingEnabled="false" connectionStringName="SiteMapConnectionString" />
       </providers>
-    </siteMap> 
+    </siteMap>
     <webServices>
       <protocols>
         <add name="HttpGet" />
@@ -76,14 +95,14 @@
           <match url="^(?!_files)(_.*)+" />
           <action type="Rewrite" url="site_specific/{R:1}" />
         </rule>
-		     <rule name="Remove trailing slash">
-			    <match url="(.*)/$" />
-			    <conditions>
-			    <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-			    <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-			    </conditions>
-			    <action type="Redirect" redirectType="Permanent" url="{R:1}" />
-		    </rule>
+        <rule name="Remove trailing slash">
+          <match url="(.*)/$" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="{R:1}" />
+        </rule>
       </rules>
     </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
@@ -104,7 +123,6 @@
       <add path="*.pdf" name="pdf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.xls" name="xls" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.xlsx" name="xlsx" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
-      
       <add path="*.doc" name="doc" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.docx" name="docx" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.pps" name="pps" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
@@ -113,21 +131,17 @@
       <add path="*.zip" name="zip" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.ai" name="ai" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.swf" name="swf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
-
       <add path="*.eot" name="eot" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.svg" name="svg" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.ttf" name="ttf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.woff" name="woff" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.woff2" name="woff2" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
-      
-      
       <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="One.Net.BLL.Paths.DownloadHandler" />
       <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
       <add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
     </handlers>
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
-
       <remove fileExtension=".mp4" />
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <remove fileExtension=".m4v" />
@@ -152,13 +166,12 @@
       <mimeMap fileExtension=".otf" mimeType="font/otf" />
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
-
       <remove fileExtension=".woff2" />
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
     </staticContent>
-   <httpErrors errorMode="Detailed">
-        <remove statusCode="404" subStatusCode="-1" />
-        <error statusCode="404" prefixLanguageFilePath="" path="site_specific\404.html" responseMode="File" />
+    <httpErrors errorMode="Detailed">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" prefixLanguageFilePath="" path="site_specific\404.html" responseMode="File" />
     </httpErrors>
   </system.webServer>
   <system.net>
@@ -296,30 +309,35 @@
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultMinifier="NullMinifier">
-      
-      
-      
-        
-      <minifiers>
-					
-				<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" /></minifiers><translators>
-					
-				<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /><add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /></translators><fileExtensions>
-					
-				<add fileExtension=".css" assetTypeCode="Css" /><add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /></fileExtensions><postProcessors>
-					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-				</postProcessors></css>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" />
+        </minifiers>
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+          <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
+        </translators>
+        <fileExtensions>
+          <add fileExtension=".css" assetTypeCode="Css" />
+          <add fileExtension=".sass" assetTypeCode="Sass" />
+          <add fileExtension=".scss" assetTypeCode="Scss" />
+        </fileExtensions>
+        <postProcessors>
+          <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
+        </postProcessors>
+      </css>
       <js defaultMinifier="NullMinifier">
-      
-        
-        
-      <minifiers>
-					
-				<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" /></minifiers><translators>
-					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				</translators><fileExtensions>
-					<add fileExtension=".js" assetTypeCode="JavaScript" />
-				</fileExtensions></js>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" />
+        </minifiers>
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+        </translators>
+        <fileExtensions>
+          <add fileExtension=".js" assetTypeCode="JavaScript" />
+        </fileExtensions>
+      </js>
     </core>
   </bundleTransformer>
 </configuration>
