JSON services were not authenticated. This is the fix. also needs upgrade of web.config
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@502 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -96,6 +96,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
@@ -202,6 +203,7 @@
     <Compile Include="Service\AdminService.cs" />
     <Compile Include="Service\IAdminService.cs" />
     <Compile Include="Service\IScaffoldService.cs" />
+    <Compile Include="Service\MembershipAuthorizationPolicy.cs" />
     <Compile Include="Service\ScaffoldService.cs" />
     <Compile Include="Service\SerializableJsonDictionary.cs" />
     <Compile Include="Utility\FileRightsReader.cs" />
