JSON services were not authenticated. This is the fix. also needs upgrade of web.config
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@502 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -42,7 +42,7 @@
       </controls>
     </pages>
     <sessionState timeout="60" />
-    <httpRuntime maxRequestLength="12288" requestValidationMode="2.0" />
+    <httpRuntime requestValidationMode="2.0" maxRequestLength="12288" targetFramework="4.5.1"/>
     <customErrors defaultRedirect="~/site_specific/error.htm" mode="Off">
       <error statusCode="404" redirect="~/site_specific/filenotfound.htm" />
       <error statusCode="403" redirect="~/site_specific/authorizationfailed.htm" />
@@ -163,31 +163,27 @@
     </mailSettings>
   </system.net>
   <system.serviceModel>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" />
     <services>
-      <service name="One.Net.BLL.Service.ScaffoldService" behaviorConfiguration="myBehavior">
+      <service name="One.Net.BLL.Service.ScaffoldService">
         <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IScaffoldService" />
       </service>
-      <service name="One.Net.BLL.Service.FormService" behaviorConfiguration="myBehavior">
+      <service name="One.Net.BLL.Service.FormService">
         <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IFormService" />
       </service>
-      <service name="One.Net.BLL.Service.AdminService" behaviorConfiguration="myBehavior">
+      <service name="One.Net.BLL.Service.AdminService">
         <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IAdminService" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior name="myBehavior">
+        <behavior>
           <serviceDebug includeExceptionDetailInFaults="true" />
-          <!--<serviceAuthorization principalPermissionMode="UseAspNetRoles" roleProviderName="NikondaRoleManager">
+          <serviceAuthorization principalPermissionMode="UseAspNetRoles" >
             <authorizationPolicies>
-              <add policyType="Nikonda.Scaffold.Core.Web.MembershipAuthorizationPolicy, Nikonda.Scaffold.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+              <add policyType="One.Net.BLL.Service.MembershipAuthorizationPolicy, One.Net.BLL, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
             </authorizationPolicies>
-          </serviceAuthorization>-->
-          <serviceCredentials>
-            <!--
-            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider" membershipProviderName="NikondaMembershipProvider"/>
-            -->
-          </serviceCredentials>
+          </serviceAuthorization>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -196,9 +192,22 @@
         <add name="NewtonsoftJsonBehavior" type="Newtonsoft.Json.Extensions.NewtonsoftJsonBehavior, NewtonsoftJsonExtensions, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
       </behaviorExtensions>
     </extensions>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="false" aspNetCompatibilityEnabled="true" />
   </system.serviceModel>
   <location path="adm">
+    <system.web>
+      <authorization>
+        <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="AdminService">
+    <system.web>
+      <authorization>
+        <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="ScaffoldService">
     <system.web>
       <authorization>
         <deny users="?" />
