--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -828,6 +828,7 @@
     <Content Include="JavaScript\jquery-2.1.3.min.map" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
     <Content Include="site_specific\aspx_templates\demo.aspx" />
+    <Content Include="site_specific\ck.css" />
     <Content Include="site_specific\ckstyles.js" />
     <Content Include="site_specific\_css\default.html" />
     <Content Include="site_specific\_js\default.html" />
