upgraded CKconnector to proper version, now thumbnails are displayed
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@510 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -70,7 +70,7 @@
     </Reference>
     <Reference Include="CKFinder, Version=2.0.0.945, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>ckfinder\_source\bin\Release\CKFinder.dll</HintPath>
+      <HintPath>ckfinder\_source\bin\Debug\CKFinder.dll</HintPath>
     </Reference>
     <Reference Include="EcmaScript.NET, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
