--- a/BLL/packages.config
+++ b/BLL/packages.config
@@ -8,5 +8,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="NLog" version="3.2.1" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.0.450" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
