max size for html on "save" was 64k.. now it's more.
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@558 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -163,6 +163,11 @@
     </mailSettings>
   </system.net>
   <system.serviceModel>
+    <bindings>
+      <webHttpBinding>
+        <binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
+      </webHttpBinding>
+    </bindings>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" />
     <services>
       <service name="One.Net.BLL.Service.ScaffoldService">
