--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -157,7 +157,7 @@
   </system.webServer>
   <system.net>
     <mailSettings>
-      <smtp from="info@renderspace.si">
+      <smtp from="noreply@renderspace.si">
         <network host="mx.renderspace.si" port="25" defaultCredentials="true" />
       </smtp>
     </mailSettings>
