module settings SQL load feature
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@588 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -148,6 +148,7 @@
     <Compile Include="DAL\DbRssFeed.cs" />
     <Compile Include="DAL\DbRSSProviderSql.cs" />
     <Compile Include="DAL\DbWebsite.cs" />
+    <Compile Include="Model\Attributes\Setting.cs" />
     <Compile Include="Model\BOArticle.cs" />
     <Compile Include="Model\BOCategory.cs" />
     <Compile Include="Model\BOContentTemplate.cs" />
