upgraded forms to new MsSqlDBUtility.dll
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@610 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/AppSettingsTemplate.config
+++ b/OneMainWeb/AppSettingsTemplate.config
@@ -7,9 +7,10 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="WebSiteId" value="2" />
   <add key="PublishFlag" value="false" />
-  <add key="CacheDuration" value="" />
   <add key="FacebookAppId" value="" />
   <add key="FacebookAppSecret" value="" />
   <add key="GoogleClientId" value="" />
   <add key="GoogleClientSecret" value="" />
+  <add key="Cache.CacheToUse" value="netmemory" />
+  <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 </appSettings>
