--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -25,6 +25,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NLog" version="3.2.1" targetFramework="net45" />
+  <package id="NLog.Config" version="3.2.0.0" targetFramework="net451" />
+  <package id="NLog.Schema" version="3.2.0.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net45" />
