--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -43,9 +43,7 @@
     </pages>
     <sessionState timeout="60" />
     <httpRuntime requestValidationMode="2.0" maxRequestLength="12288" targetFramework="4.5.1" />
-    <customErrors defaultRedirect="~/site_specific/error.htm" mode="Off">
-      <error statusCode="404" redirect="~/site_specific/filenotfound.htm" />
-      <error statusCode="403" redirect="~/site_specific/authorizationfailed.htm" />
+    <customErrors mode="RemoteOnly" defaultRedirect="/site_specific/500.html">
     </customErrors>
     <compilation debug="true" targetFramework="4.5.1" />
     <authentication mode="None" />
@@ -150,9 +148,11 @@
       <remove fileExtension=".woff2" />
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
     </staticContent>
-    <httpErrors errorMode="Detailed">
+    <httpErrors errorMode="DetailedLocalOnly" defaultResponseMode="ExecuteURL">
       <remove statusCode="404" subStatusCode="-1" />
-      <error statusCode="404" prefixLanguageFilePath="" path="site_specific\404.html" responseMode="File" />
+      <error statusCode="404" prefixLanguageFilePath="" path="/site_specific/404.html" responseMode="Redirect" />
+      <remove statusCode="403" subStatusCode="-1" />
+      <error statusCode="403" prefixLanguageFilePath="" path="/site_specific/403.html" responseMode="Redirect" />
     </httpErrors>
   </system.webServer>
   <system.net>
