--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ Ankh.NoLoad
  
 #Other
 .svn
+
+# NuGet Packages Directory
+## TODO: If you have NuGet Package Restore enabled, uncomment the next line
+packages/
