--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Ankh.NoLoad
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
 packages/
+
+*.nupkg
