.gitignore is now working

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -83,6 +83,7 @@
           <action type="Redirect" redirectType="Permanent" url="{R:1}" />
         </rule>
       </rules>
+      <rewriteMaps configSource="LocalRewriteMaps.config" />
     </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
