added local file for rewrite config

--- a/OneMainWeb/web.config
+++ b/OneMainWeb/web.config
@@ -67,23 +67,9 @@
       </protocols>
     </webServices>
   </system.web>
-  <system.webServer>
+  <system.webServer> 
     <rewrite>
-      <rules>
-        <rule name="underscoreRedir" stopProcessing="true">
-          <match url="^(?!_files)(_.*)+" />
-          <action type="Rewrite" url="site_specific/{R:1}" />
-        </rule>
-        <rule name="Remove trailing slash">
-          <match url="(.*)/$" />
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-          </conditions>
-          <action type="Redirect" redirectType="Permanent" url="{R:1}" />
-        </rule>
-      </rules>
-      <rewriteMaps configSource="LocalRewriteMaps.config" />
+      <rules configSource="LocalRewrite.config" />
     </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
