--- a/OneMainWeb/One.Net.nuspec
+++ b/OneMainWeb/One.Net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>One.NET</id>
-        <version>3.0.2.0</version>
+        <version>3.0.3.0</version>
         <title>One.NET</title>
         <authors>samof</authors>
         <owners>Renderspace d.o.o.</owners>
@@ -10,18 +10,6 @@
         <description>A simple enterprise content management system</description>
         <copyright>Copyright © Renderspace d.o.o. 2015</copyright>
         <dependencies>
-            <dependency id="BundleTransformer.SassAndScss" version="1.9.52" />
-            <dependency id="BundleTransformer.Yui" version="1.9.52" />
-            <dependency id="dropzone" version="4.0.0" />
-            <dependency id="jQuery.Validation" version="1.13.1" />
-            <dependency id="Kentor.OwinCookieSaver" version="1.0.2" />
-            <dependency id="Less.js" version="1.5.1" />
-            <dependency id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" />
-            <dependency id="Microsoft.AspNet.Identity.Owin" version="2.2.1" />
-            <dependency id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" />
-            <dependency id="Microsoft.Owin.Security.Facebook" version="3.0.1" />
-            <dependency id="Microsoft.Owin.Security.Google" version="3.0.1" />
-            <dependency id="NLog.Config" version="4.0.1" />
         </dependencies>
     </metadata>
     <files>
@@ -63,7 +51,10 @@
       <file src="Global.asax" target="content\Global.asax" />
       <file src="OneMain.Master" target="content\OneMain.Master" />
       <file src="Web.sitemap" target="content\Web.sitemap" />
-      <file src="bin\One.Net.BLL.dll" target="lib\net451" />
-      <file src="bin\OneMainWeb.dll" target="lib\net451" />
+      <file src="bin\*.dll" target="lib\net451" />
+      <file src="gitignore.template" target="content" />
+      <file src="Web.config" target="content" />
+      <file src="LocalRewrite.config" target="content" />      
+
     </files>
 </package>
